--- a/IPCanary/Base.lproj/Main.storyboard
+++ b/IPCanary/Base.lproj/Main.storyboard
@@ -36,6 +36,10 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="ipLabel" destination="CBA-be-3n5" id="SdF-zW-c4g"/>
+                        <outlet property="refreshBtn" destination="pZd-Ic-fVu" id="huo-UQ-Jwc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
