--- a/IPCanary/MainView.xib
+++ b/IPCanary/MainView.xib
@@ -26,7 +26,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IP Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xwi-Qg-Bfe">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="192.168.1.1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xwi-Qg-Bfe">
                     <rect key="frame" x="35" y="128" width="250" height="20"/>
                     <accessibility key="accessibilityConfiguration" identifier="IP Label"/>
                     <constraints>
@@ -44,7 +44,7 @@
                         <constraint firstAttribute="height" constant="20" id="PEE-YG-nsh"/>
                         <constraint firstAttribute="width" constant="110" id="e6x-LQ-vie"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="17"/>
+                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -55,11 +55,11 @@
                         <constraint firstAttribute="width" constant="110" id="B3K-UO-8Wr"/>
                         <constraint firstAttribute="height" constant="20" id="iph-co-UUe"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="17"/>
+                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Update Output" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nmC-ND-oG1">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2017-01-02 23:47:44 +0000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nmC-ND-oG1">
                     <rect key="frame" x="15" y="350" width="290" height="20"/>
                     <accessibility key="accessibilityConfiguration" identifier="Last Update Output Label"/>
                     <constraints>
@@ -70,7 +70,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aAz-o8-bYa">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Atlanta" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aAz-o8-bYa">
                     <rect key="frame" x="15" y="182" width="290" height="20"/>
                     <accessibility key="accessibilityConfiguration" identifier="City Label"/>
                     <constraints>
@@ -81,7 +81,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5j0-Yz-e3F">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="United States" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5j0-Yz-e3F">
                     <rect key="frame" x="15" y="238" width="290" height="20"/>
                     <accessibility key="accessibilityConfiguration" identifier="Country Label"/>
                     <constraints>
@@ -92,7 +92,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hostname Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IWh-Ll-Vtv">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="104.129.24.147.adsl.inet-telecom.org" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IWh-Ll-Vtv">
                     <rect key="frame" x="15" y="294" width="290" height="20"/>
                     <accessibility key="accessibilityConfiguration" identifier="Hostname Label"/>
                     <constraints>
@@ -109,7 +109,7 @@
                         <constraint firstAttribute="width" constant="110" id="6yF-vU-fOz"/>
                         <constraint firstAttribute="height" constant="20" id="Mft-g4-wqA"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="17"/>
+                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -119,7 +119,7 @@
                         <constraint firstAttribute="height" constant="20" id="Ex4-2O-G8L"/>
                         <constraint firstAttribute="width" constant="110" id="Ztl-Eu-xqQ"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="17"/>
+                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -129,7 +129,7 @@
                         <constraint firstAttribute="width" constant="110" id="WoL-Fj-taN"/>
                         <constraint firstAttribute="height" constant="20" id="lTA-g4-9zD"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="17"/>
+                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -139,11 +139,11 @@
                         <constraint firstAttribute="height" constant="20" id="sxF-TS-FIG"/>
                         <constraint firstAttribute="width" constant="110" id="uWY-b0-GxJ"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="17"/>
+                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Change Output" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JBj-Ys-JfN">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2017-01-02 23:47:44 +0000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JBj-Ys-JfN">
                     <rect key="frame" x="15" y="406" width="290" height="20"/>
                     <accessibility key="accessibilityConfiguration" identifier="Last Change Output Label"/>
                     <constraints>
@@ -173,7 +173,10 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" red="0.57985528523489926" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.5190104166666667" green="0.0" blue="0.0048588486449876863" alpha="1" colorSpace="calibratedRGB"/>
+                    <accessibility key="accessibilityConfiguration" identifier="Bottom View">
+                        <bool key="isElement" value="YES"/>
+                    </accessibility>
                     <constraints>
                         <constraint firstItem="bge-TA-lSk" firstAttribute="centerY" secondItem="X1c-t4-ezl" secondAttribute="centerY" id="Gyk-AT-tDF"/>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="320" id="gOR-a9-Pca"/>
@@ -182,7 +185,7 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.49803921568627452" green="0.49803921568627452" blue="0.49803921568627452" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="5j0-Yz-e3F" firstAttribute="top" secondItem="IEu-5H-yS4" secondAttribute="bottom" constant="8" id="07i-ig-Ohc"/>
                 <constraint firstItem="X1c-t4-ezl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="3Df-H9-8KG"/>
