--- a/Widget/Base.lproj/IPCanaryWidgetView.storyboard
+++ b/Widget/Base.lproj/IPCanaryWidgetView.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="M4Y-Lb-cyx">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -23,120 +23,121 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WKX-AX-Nua">
-                                <rect key="frame" x="16" y="26" width="99" height="18"/>
+                                <rect key="frame" x="16" y="26" width="108" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="18" id="A2b-2Q-yEF"/>
-                                    <constraint firstAttribute="width" constant="99" id="dNR-Il-qAZ"/>
+                                    <constraint firstAttribute="width" constant="108" id="dNR-Il-qAZ"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IP Address:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5zt-Is-5ep">
-                                <rect key="frame" x="16" y="6" width="99" height="18"/>
+                                <rect key="frame" x="16" y="6" width="108" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="18" id="PY7-Kd-y97"/>
-                                    <constraint firstAttribute="width" constant="99" id="XdO-gj-Lhm"/>
+                                    <constraint firstAttribute="width" constant="108" id="XdO-gj-Lhm"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="88t-GK-eYa">
-                                <rect key="frame" x="16" y="46" width="99" height="18"/>
+                                <rect key="frame" x="16" y="46" width="108" height="18"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="99" id="S3M-xl-lrr"/>
+                                    <constraint firstAttribute="width" constant="108" id="S3M-xl-lrr"/>
                                     <constraint firstAttribute="height" constant="18" id="eBL-5F-6H7"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Update:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0rJ-14-Cwr">
-                                <rect key="frame" x="16" y="66" width="99" height="18"/>
+                                <rect key="frame" x="16" y="66" width="108" height="20"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="99" id="6Sa-R9-653"/>
-                                    <constraint firstAttribute="height" constant="18" id="JjE-1o-iWO"/>
+                                    <constraint firstAttribute="width" constant="108" id="6Sa-R9-653"/>
+                                    <constraint firstAttribute="height" constant="20" id="JjE-1o-iWO"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Change:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vaq-RM-TDm">
-                                <rect key="frame" x="16" y="86" width="101" height="18"/>
+                                <rect key="frame" x="16" y="86" width="108" height="18"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="101" id="0x2-Q4-Hgy"/>
+                                    <constraint firstAttribute="width" constant="108" id="0x2-Q4-Hgy"/>
                                     <constraint firstAttribute="height" constant="18" id="bhO-ll-rLq"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GDR-pe-SOT">
-                                <rect key="frame" x="130" y="6" width="200" height="18"/>
+                                <rect key="frame" x="132" y="7" width="200" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="9PU-93-5SB"/>
                                     <constraint firstAttribute="height" constant="18" id="e4W-Tg-IOw"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IYV-w0-ulp">
-                                <rect key="frame" x="130" y="26" width="200" height="18"/>
+                                <rect key="frame" x="132" y="27" width="200" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="C2r-mi-6XO"/>
                                     <constraint firstAttribute="height" constant="18" id="SHq-si-Jkp"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oFa-ow-tpS">
-                                <rect key="frame" x="130" y="46" width="200" height="18"/>
+                                <rect key="frame" x="132" y="47" width="200" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="0YI-Nw-anL"/>
                                     <constraint firstAttribute="height" constant="18" id="iVT-mN-V87"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JTL-P8-9sA">
-                                <rect key="frame" x="130" y="66" width="200" height="18"/>
+                                <rect key="frame" x="132" y="67" width="200" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="HqC-lG-cGW"/>
                                     <constraint firstAttribute="height" constant="18" id="hdk-jh-zf1"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8rh-qr-V0Z">
-                                <rect key="frame" x="130" y="86" width="200" height="18"/>
+                                <rect key="frame" x="132" y="87" width="200" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="0ka-FU-y0c"/>
                                     <constraint firstAttribute="height" constant="18" id="BdV-ya-xs5"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
+                        <color key="backgroundColor" red="0.49803921568627452" green="0.49803921568627452" blue="0.49803921568627452" alpha="1" colorSpace="calibratedRGB"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="88t-GK-eYa" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" id="A9B-rF-jgz"/>
                             <constraint firstItem="88t-GK-eYa" firstAttribute="top" secondItem="WKX-AX-Nua" secondAttribute="bottom" constant="2" id="BVM-n6-B7M"/>
                             <constraint firstItem="5zt-Is-5ep" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" id="BeA-mE-Heb"/>
                             <constraint firstItem="vaq-RM-TDm" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" id="CTk-Dk-QYs"/>
-                            <constraint firstItem="vaq-RM-TDm" firstAttribute="top" secondItem="0rJ-14-Cwr" secondAttribute="bottom" constant="2" id="Fzh-LY-zUM"/>
-                            <constraint firstItem="GDR-pe-SOT" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="6" id="HpG-QL-gfN"/>
-                            <constraint firstItem="GDR-pe-SOT" firstAttribute="leading" secondItem="5zt-Is-5ep" secondAttribute="trailing" constant="15" id="HrK-xo-ZMf"/>
+                            <constraint firstItem="vaq-RM-TDm" firstAttribute="top" secondItem="0rJ-14-Cwr" secondAttribute="bottom" id="Fzh-LY-zUM"/>
+                            <constraint firstItem="GDR-pe-SOT" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="7" id="HpG-QL-gfN"/>
+                            <constraint firstItem="GDR-pe-SOT" firstAttribute="leading" secondItem="5zt-Is-5ep" secondAttribute="trailing" constant="8" id="HrK-xo-ZMf"/>
                             <constraint firstItem="JTL-P8-9sA" firstAttribute="top" secondItem="oFa-ow-tpS" secondAttribute="bottom" constant="2" id="JaG-Fb-aOv"/>
-                            <constraint firstItem="oFa-ow-tpS" firstAttribute="leading" secondItem="88t-GK-eYa" secondAttribute="trailing" constant="15" id="PwV-GS-xbc"/>
-                            <constraint firstItem="8rh-qr-V0Z" firstAttribute="leading" secondItem="vaq-RM-TDm" secondAttribute="trailing" constant="13" id="SOb-BO-ZSp"/>
-                            <constraint firstItem="IYV-w0-ulp" firstAttribute="leading" secondItem="WKX-AX-Nua" secondAttribute="trailing" constant="15" id="Uc4-UJ-Gzu"/>
-                            <constraint firstItem="JTL-P8-9sA" firstAttribute="leading" secondItem="0rJ-14-Cwr" secondAttribute="trailing" constant="15" id="YOl-ML-DPp"/>
+                            <constraint firstItem="oFa-ow-tpS" firstAttribute="leading" secondItem="88t-GK-eYa" secondAttribute="trailing" constant="8" id="PwV-GS-xbc"/>
+                            <constraint firstItem="8rh-qr-V0Z" firstAttribute="leading" secondItem="vaq-RM-TDm" secondAttribute="trailing" constant="8" id="SOb-BO-ZSp"/>
+                            <constraint firstItem="IYV-w0-ulp" firstAttribute="leading" secondItem="WKX-AX-Nua" secondAttribute="trailing" constant="8" id="Uc4-UJ-Gzu"/>
+                            <constraint firstItem="JTL-P8-9sA" firstAttribute="leading" secondItem="0rJ-14-Cwr" secondAttribute="trailing" constant="8" id="YOl-ML-DPp"/>
                             <constraint firstItem="0rJ-14-Cwr" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" id="dEM-Rm-Bmt"/>
                             <constraint firstItem="5zt-Is-5ep" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="6" id="g3M-Nk-P1z"/>
                             <constraint firstItem="0rJ-14-Cwr" firstAttribute="top" secondItem="88t-GK-eYa" secondAttribute="bottom" constant="2" id="k2R-WS-vai"/>
@@ -171,7 +172,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-6.4000000000000004" y="97.151424287856074"/>
+            <point key="canvasLocation" x="-6.5625" y="96.126760563380287"/>
         </scene>
     </scenes>
 </document>
